sandbox/output
AnagramTest.java:16: error: ')' expected
        assertEquals("a", anagram.generate("a");
                                               ^
1 error
